[components] remove z-index on textarea. Strange bug makes it dissapear when other forms are overflowing

--- a/packages/@sanity/components/src/textareas/styles/DefaultTextArea.css
+++ b/packages/@sanity/components/src/textareas/styles/DefaultTextArea.css
@@ -1,7 +1,5 @@
 @import 'part:@sanity/base/theme/variables-style';
 
-@use postcss-cssnext;
-
 .root {
   width: 100%;
   position: relative;
@@ -11,7 +9,6 @@
   composes: root from 'part:@sanity/base/theme/forms/textarea-style';
   position: relative;
   width: 100%;
-  z-index: 2;
 }
 
 .focusHelper {
